# local-ai-transcript-app

./: .gitignore  README.md
.devcontainer/: devcontainer.json  post-create.sh
backend/: app.py  pyproject.toml  transcription.py
frontend/: eslint.config.js  package-lock.json
frontend/src/: App.tsx
frontend/src/components/: Box.tsx  SettingsPanel.tsx  TextBox.module.css  TextBox.tsx  UploadZone.tsx
frontend/src/styles/: variables.css
frontend/src/types/: index.ts
