[project]
name = "ai-transcript-app"
version = "0.1.0"
description = "AI-powered voice transcription with Whisper and LLM cleaning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.0",
    "numpy>=2.3.4",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]
